[package]
name = "commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecraft_data_types = { version = "0.1.0", git = "https://github.com/SubZeroLabs/MinecraftTypes", branch = "master" }
mc_packet_protocol = { version = "0.1.0", git = "https://github.com/SubZeroLabs/PacketProtocol", branch = "master" }
async-trait = "0.1.51"
tokio = { version = "1", features = ["io-util"] }
anyhow = "1.0.45"
